# NULLS

./: .gitignore  .gitmodules  CMakeLists.txt  Justfile  LICENSE  README.md
bench/: bench_arrow_cp.cpp  bench_avx_agg.cpp  bench_dense_to_spaced.cpp  bench_helper.h  bench_in_mem.cpp  bench_vec_load.cpp  local.cmake  motivation.cpp  read_pq.cpp  roaring_cr.cpp
cmake/: arrow.cmake  croaring.cmake  xsimd.cmake
mem/: array_base.h  dense_array.cpp  dense_array.h  local.cmake  spaced_array.cpp  spaced_array.h  special_value_array.cpp  special_value_array.h
mem/utils/: avx2_bit_util.cpp  bit_util.cpp  bit_util.h  exceptions.hpp  macros.hpp  spaced_expand_fused.cpp  sse4_bit_util.cpp  test_util.h
outputs/: README.md
scripts/: compact_vs_placeholder.py  fls.py  gen_vector.py  generate_unroll.py  motivate.py  placeholder_filling_exp.py  prefix_sum_code_gen.py  process_helper.py  set_kVecSize.py  setup.py
src/: BitpackingInterface.cpp  BitpackingInterface.hpp  BitpackingStat.hpp  CompressInterface.hpp  D4DeltaInterface.cpp  D4DeltaInterface.hpp  D4RLEInterface.cpp  D4RLEInterface.hpp  DeltaInterface.cpp  DeltaInterface.hpp  FLSBitpackingInterface.cpp  FLSBitpackingInterface.hpp  FLSDeltaInterface.cpp  FLSDeltaInterface.hpp  FLSInterface.hpp  FLSRLEInterface.cpp  FLSRLEInterface.hpp  RLEBranchlessInterface.cpp  RLEBranchlessInterface.hpp  RLEInterface.cpp  RLEInterface.hpp  SampleCompressInterface.cpp  SampleCompressInterface.hpp  SampleSmartNullCompressInterface.cpp  SampleSmartNullCompressInterface.hpp  VarInts.hpp  ZipfGenerator.hpp  bit_util.cpp  bit_util.hpp  cycleclock.hpp  main.cpp  nullgen.cpp  nullgen.hpp  utils.hpp  zipf.hpp
test/: array_test.cpp  local.cmake  test.cpp
